调整交易表表及增加界面文件

--- a/fuli/ROOT/app/tpl/home.html
+++ b/fuli/ROOT/app/tpl/home.html
@@ -1,4 +1,4 @@
-<div ng-include src="headTpl"></div>
+<div ng-include src="'app/tpl/head.html'"></div>
 <div class="container">
-  <div ui-view="main"></div>
+  <div ui-view="center"></div>
 </div>
