注册账号及修改密码

--- a/fuli/ROOT/app/tpl/notice.html
+++ b/fuli/ROOT/app/tpl/notice.html
@@ -1,6 +1,14 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title"></h3>
+		<h3 class="panel-title">玩家公告</h3>
 	</div>
-	<div class="panel-body"></div>
+	<div class="panel-body">
+	<p ng-if="noticeList.length<=0">
+	无数据！
+	</p>
+	<div>
+		<table>
+		</table>
+	</div>
+	</div>
 </div>
