--- a/fuli/ROOT/app/tpl/buy.html
+++ b/fuli/ROOT/app/tpl/buy.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title"></h3>
+		<h3 class="panel-title">抢购金币</h3>
 	</div>
 	<div class="panel-body"></div>
 </div>
