--- a/fuli/ROOT/app/tpl/modifyPwd.html
+++ b/fuli/ROOT/app/tpl/modifyPwd.html
@@ -1,6 +1,64 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title"></h3>
+		<h3 class="panel-title">修改密码</h3>
 	</div>
-	<div class="panel-body"></div>
+	<div class="panel-body">
+  <form name="form" class="form-horizontal" role="form" novalidate="novalidate">
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">原一级密码：</label>
+    <div class="col-sm-4">
+      <input type="password" class="form-control" ng-model="data.pwd1" required="required">
+    </div>
+    <div class="col-sm-4">
+    <p ng-if="form.pwd1.$error.required">必填！</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">新一级密码：</label>
+    <div class="col-sm-4">
+      <input type="password" class="form-control" ng-model="data.pwd2" required="required">
+    </div>
+    <div class="col-sm-4">
+    <p ng-if="form.pwd2.$error.required">必填！</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">确认一级密码：</label>
+    <div class="col-sm-4">
+      <input type="password" class="form-control" ng-model="data.pwd3" required="required">
+    </div>
+    <div class="col-sm-4">
+    <p ng-if="form.pwd3.$error.required">必填！</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">原二级密码：</label>
+    <div class="col-sm-4">
+      <input type="password" class="form-control" ng-model="data.pwd4" required="required">
+    </div>
+    <div class="col-sm-4">
+    <p ng-if="form.pwd4.$error.required">必填！</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">新二级密码：</label>
+    <div class="col-sm-4">
+      <input type="password" class="form-control" ng-model="data.pwd5" required="required">
+    </div>
+    <div class="col-sm-4">
+    <p ng-if="form.pwd5.$error.required">必填！</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">确认二级密码：</label>
+    <div class="col-sm-4">
+      <input type="password" class="form-control" ng-model="data.pwd6" required="required">
+    </div>
+    <div class="col-sm-4">
+    <p ng-if="form.pwd6.$error.required">必填！</p>
+    </div>
+  </div>
+  <div class="text-center"><a class="btn btn-success" ng-click="savePwd()">保存</a></div>
+  </form>
+	</div>
 </div>
