--- a/fuli/ROOT/index.html
+++ b/fuli/ROOT/index.html
@@ -4,7 +4,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<title>{{userInfo.sn}}{{system.name}}</title>
+<title>{{system.name}}</title>
 <!-- <link rel="stylesheet" href="s/bootstrap/css/bootstrap.min.css"> -->
 <!-- <link rel="stylesheet" href="s/js/jqdialog/jDialog.css"> -->
 <link href="s/css/font-awesome.min.css" rel="stylesheet">
