--- a/fuli/ROOT/app/tpl/head.html
+++ b/fuli/ROOT/app/tpl/head.html
@@ -38,7 +38,7 @@
             <li><a href="#/reg">注册帐号</a></li>
             <li><a href="#/myAccounts">我的玩家帐号</a></li>
             <li><a href="#/activeAccount">激活帐号</a></li>
-            <li><a href="#/myNewAccount">我的新增帐号</a></li>
+<!--             <li><a href="#/myNewAccount">我的新增帐号</a></li> -->
           </ul>
         </li>
         <li><a href="#/contactus">联络我们</a></li>
