--- a/fuli/ROOT/app/tpl/modifyPwd.html
+++ b/fuli/ROOT/app/tpl/modifyPwd.html
@@ -3,6 +3,9 @@
 		<h3 class="panel-title">修改密码</h3>
 	</div>
 	<div class="panel-body">
+	<p class="red">
+	请注意字母区分大小写！密码必须包含字母与数字，请不要使用abc123等简易密码，以防帐号被盗。
+	</p>
   <form name="form" class="form-horizontal" role="form" novalidate="novalidate">
   <div class="form-group">
     <label for="" class="col-sm-2 control-label">原一级密码：</label>
