--- a/fuli/ROOT/app/tpl/guid.html
+++ b/fuli/ROOT/app/tpl/guid.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title"></h3>
+		<h3 class="panel-title">新手导航</h3>
 	</div>
 	<div class="panel-body"></div>
 </div>
