--- a/fuli/ROOT/app/tpl/home.html
+++ b/fuli/ROOT/app/tpl/home.html
@@ -1,4 +1,4 @@
 <div ng-include src="'app/tpl/head.html'"></div>
-<div class="container">
+<div class="container" style="padding:0px;">
   <div ui-view="center"></div>
 </div>
