--- a/fuli/ROOT/app/tpl/messageBox.html
+++ b/fuli/ROOT/app/tpl/messageBox.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title"></h3>
+		<h3 class="panel-title">私人信箱</h3>
 	</div>
 	<div class="panel-body"></div>
 </div>
