--- a/fuli/ROOT/app/tpl/buy.html
+++ b/fuli/ROOT/app/tpl/buy.html
@@ -3,8 +3,8 @@
 		<h3 class="panel-title">抢购金币</h3>
 	</div>
 	<div class="panel-body">
-	<a class="btn btn-success">刷新</a>
-	<table class="table table-hover table-bordered" ng-if-="page.totalRow>0">
+	<a class="btn btn-success" ng-click="">刷新</a>
+	<table class="table table-hover table-bordered" ng-if="page.totalRow>0">
 		<thead>
 			<tr>
 				<th>提交时间</th>
