--- a/fuli/ROOT/app/tpl/noticeShow.html
+++ b/fuli/ROOT/app/tpl/noticeShow.html
@@ -3,6 +3,9 @@
 		<h3 class="panel-title">玩家公告-{{data.title}}</h3>
 	</div>
 	<div class="panel-body">
+	发布时间：{{data.create_datetime}}
+	<br>
 	{{data.content}}
+	<center><a href="javascript:window.history.go(-1)" class="btn btn-success">返回</a></center>
 	</div>
 </div>
