--- a/fuli/ROOT/app/tpl/main.html
+++ b/fuli/ROOT/app/tpl/main.html
@@ -29,7 +29,7 @@
     <h3 class="panel-title">最新公告</h3>
   </div>
   <div class="panel-body">
-  <p ng-repeat="el in noticeList" class="list">{{el.title}}{{el.create_time}}</p>
+  <p ng-repeat="el in noticePage.list" class="list"><a ui-sref="noticeShow({id:el.id})">{{el.title}}</a><span class="fr">{{el.create_datetime}}</span></p>
   </div>
 </div>
 <div class="panel panel-default">
