--- a/fuli/ROOT/app/tpl/noticeEdit.html
+++ b/fuli/ROOT/app/tpl/noticeEdit.html
@@ -1,8 +1,21 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title">玩家公告-{{data.title}}</h3>
+		<h3 class="panel-title">玩家公告</h3>
 	</div>
 	<div class="panel-body">
-	{{data.content}}
+	<form class="form-horizontal" novalidate="novalidate" name="regForm" id="regForm" role="form">
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">标题：</label>
+    <div class="col-sm-4">
+      <input type="text" class="form-control" ng-model="data.title" required="required">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="" class="col-sm-2 control-label">内容：</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" ng-model="data.title" required="required"></textarea>
+    </div>
+  </div>
+  </form>
 	</div>
 </div>
